[gd_scene load_steps=2 format=3 uid="uid://c3o5b2h8xwx15"]

[ext_resource type="Script" uid="uid://bdck710ru2ftj" path="res://src/ui/pause_menu.gd" id="1_yqfnv"]

[node name="PauseMenu" type="VBoxContainer"]
script = ExtResource("1_yqfnv")

[node name="ReturnGameButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Return to game"

[node name="ReturnMenuButton" type="Button" parent="."]
layout_mode = 2
text = "Return to menu"

[connection signal="pressed" from="ReturnGameButton" to="." method="_on_return_game_button_pressed"]
[connection signal="pressed" from="ReturnMenuButton" to="." method="_on_return_menu_button_pressed"]
